# timedb

./: .all-contributorsrc  .env.example  .gitignore  .readthedocs.yml  .vercelignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  chartdb_com_with_input.txt  deploy_modal.py  export.sql  output.json  pg_create_table.py  pg_create_table_with_metadata.py  pg_insert_table_with_metadata.py  pg_read_table.py  pg_update_records.py  pyproject.toml  render.yaml  requirements.txt  schema.json  setup.sh  vercel.json  workflow_fingrid_wind_forecast.py  workflow_nordpool_id.py
,github/workflows/: neon.yml
.github/workflows/: docs.yml  tests.yml
docs/: README.md  api_reference.rst  api_setup.rst  cli.rst  conf.py  examples.rst  index.rst  installation.rst  reference.rst  requirements.txt  sdk.rst
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
examples/: 01_basic_usage.py  03_updates_and_annotations.py  README.md  colab_setup.py  epex_intraday_example.py  init_db.py  nb_01_single_series.ipynb  nb_01_write_read.ipynb  nb_01_write_read_pandas.ipynb  nb_02_insert_batches.ipynb  nb_02_multi_insert.ipynb  nb_02_multi_series.ipynb  nb_02_units_validation.ipynb  nb_03_forecast_revisions.ipynb  nb_04_reads.ipynb  nb_04_relative_forecasts.ipynb  nb_04_timeseries_changes.ipynb  nb_05_api_usage.ipynb  nb_05_corrections.ipynb  nb_05_multiple_series.ipynb  nb_05_timeseries_changes.ipynb  nb_06_api.ipynb  nb_06_api_usage.ipynb  nb_07_api_usage.ipynb  nb_08_authentication.ipynb  nb_08a_authentication_cli.ipynb  nb_08b_authentication_sdk.ipynb  nb_09_latency_benchmark.ipynb  nb_timeseries_class.ipynb  quickstart copy.ipynb  quickstart.ipynb
examples/workflows/: __init__.py  workflow_fingrid_wind_forecast.py  workflow_nordpool_id.py
local-db/: .gitignore  clean-restart-db.fish  clean-restart-db.sh  docker-compose.yml  restart-db.fish  restart-db.sh
postgresql/: clean-restart-db.fish  docker-compose.yml  restart-db.fish
scripts/: benchmark_flat.py  benchmark_flat_basic.py  benchmark_latency.py  benchmark_monte_carlo_queries.py  benchmark_overlapping.py  bulk_insert.py  isnert_overlapping.py  storage_analysis.sql  storage_analysis_timescaledb.sql  storage_estimate.py
scripts/benchmark_results/: benchmark_results.csv  benchmark_statistics.csv
scripts/benchmark_results_basic/: benchmark_results.csv  benchmark_statistics.csv
scripts/benchmark_results_monte_carlo/: monte_carlo_queries.csv  monte_carlo_queries_stats.csv
scripts/benchmark_results_overlapping_fin/: benchmark_results.csv
tests/: README.md  conftest.py  test_client_sessionless.py  test_connection.py  test_conninfo_forwarding.py  test_db_read_where_clause.py  test_imports.py  test_insert.py  test_integration.py  test_meta_cte.py  test_models.py  test_pint.py  test_pipeline_utils.py  test_read.py  test_read_pipeline.py  test_timedatamodel.py  test_timeseries.py  test_update.py  test_write_concurrency.py  test_write_pipeline.py  test_write_validation.py
timedb/: __init__.py  api.py  api_server.py  auth.py  cli.py  client.py  connection.py  insert_pipeline.py  models.py  pg_create_table_with_metadata.py  pg_insert_table_with_metadata.py  pg_insert_table_with_metadata.sql  pg_read_table.py  pg_update_records.py  pipeline_utils.py  profiling.py  read.py  read_pipeline.py  sdk.py  sdk.py.backup  types.py  write.py  write_pipeline.py
timedb/db/: __init__.py  create.py  create_with_metadata.py  (+9 more)
timescaledb-test/: clean-restart-db.fish  clean-restart-db.sh  docker-compose.yml  restart-db.fish  restart-db.sh
(+33 files in other folders)
