[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["timedb", "timedb.db"]

[tool.setuptools.package-data]
timedb = ["sql/*.sql"]

[project]
name = "timedb"
version = "0.1.1"
description = "timedb — opinionated schema & API for time series"
readme = "README.md"
requires-python = ">=3.9"

# runtime dependencies (adjust versions as you prefer)
dependencies = [
  "typer>=0.9.0",             # CLI framework with Rich integration
  "psycopg[binary]>=3.1",     # psycopg3 with binary wheels on macOS
  "psycopg_pool>=3.1",         # Connection pooling for psycopg3
  "python-dotenv>=0.21",      # load_dotenv used in helper scripts
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "sqlalchemy>=2.0.0",
  "matplotlib>=3.7.5",
  "pint>=0.23",               # Unit handling and conversion
  "pint-pandas>=0.3",         # Pandas integration for Pint units
  "ipykernel>=6.31.0",
  "requests>=2.32.5",
  "modal>=1.2.6",
  "jupyter>=1.1.1",
  "notebook>=7.5.2",
  "pytest>=8.4.2",
  "seaborn>=0.13.2",
  "sphinx>=7.4.7",
  "nbsphinx>=0.9.8",
  "sphinx-rtd-theme>=3.1.0",
  "gitpython>=3.1.46",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-cov>=5.0.0",
]

# expose the CLI command 'timedb' which points to the Typer app in timedb/cli.py
[project.scripts]
timedb = "timedb.cli:app"
