[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["timedb"]

[tool.setuptools.package-data]
timedb = ["sql/*.sql"]

[project]
name = "timedb"
version = "0.7.0"
description = "Minimal stateless ClickHouse library for 3-dimensional time series"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "python-dotenv>=0.21",
  "pandas>=2.3.0",
  "polars>=1.0.0",
  "pyarrow>=14.0",
  "numpy>=1.24",
  "timedatamodel==0.7.0",
  "uuid6>=2024.1",
  "clickhouse-connect>=0.15.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-cov>=5.0.0",
  "nbmake>=1.5",
]
notebooks = [
  "matplotlib>=3.7",
  "ipykernel>=6.0",
]
docs = [
  "sphinx>=7.4.7",
  "nbsphinx>=0.9.8",
  "sphinx-rtd-theme>=3.1.0",
]
